  (Florian Angeletti, review and suggestion by Gabriel Scherer)

- #1767: change html manual to use relative font sizes.
  (Charles Chamberlain, review by Daniel Bünzli, Perry E. Metzger,
  Josh Berdine, and Gabriel Scherer)

- #1779: integrate the Bigarray documentation into the main manual.
  (Perry E. Metzger, review by Florian Angeletti and Xavier Clerc)

### Type system:

- #7611, #1491: reject the use of generative functors as applicative.
  (Valentin Gatien-Baron)

- #7706, #1565: in recursive value declarations, track
  static size of locally-defined variables.
  (Gabriel Scherer, review by Jeremy Yallop and Leo White, report by Leo White)

- #7717, #1593: in recursive value declarations, don't treat
  unboxed constructor size as statically known.
  (Jeremy Yallop, report by Pierre Chambart, review by Gabriel Scherer)

- #7767, #1712: restore legacy treatment of partially-applied
  labeled functions in 'let rec' bindings.
  (Jeremy Yallop, report by Ivan Gotovchits, review by Gabriel Scherer)

* #7787, #1652, #1743: Don't remove module aliases in `module type of`
  and `with module`.
  The old behaviour can be obtained using the `[@remove_aliases]` attribute.
  (Leo White and Thomas Refis, review by Jacques Garrigue)

- #1468: Do not enrich type_decls with incoherent manifests.
  (Thomas Refis and Leo White, review by Jacques Garrigue)

- #1469: Use the information from [@@immediate] annotations when
  computing whether a type can be [@@unboxed].
  (Damien Doligez, report by Stephan Muenzel, review by Alain Frisch)

- #1513: Allow compilation units to shadow sub-modules of Pervasives.
  For instance users can now use a largeFile.ml file in their project.
  (Jérémie Dimino, review by Nicolás Ojeda Bär, Alain Frisch and Gabriel
  Radanne)

- #1516: Allow float array construction in recursive bindings
  when configured with -no-flat-float-array.
  (Jeremy Yallop, report by Gabriel Scherer)

- #1583: propagate refined ty_arg to Parmatch checks.